@@ -11,6 +11,7 @@ Revision 4.4.2, released 2017-11-XX
 - Example scripts rearranged in a way that IPv6 requirement is
   clearly encoded in the script's name
 - Fixed non-implied-OID encoding in SNMP table indices
+- Fixed inconsistent SNMPv3 discovery and retrying algorithm
 
 Revision 4.4.1, released 2017-10-23
 -----------------------------------
